# LabsSystemDesign2026

lab1/: README.md  workspace.dsl
lab2/: Dockerfile  README.md  openapi.yaml
lab2/src/: api_utils.cpp  api_utils.hpp  handlers.cpp  handlers.hpp  main.cpp  recipe_storage.cpp  recipe_storage.hpp
lab3/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  optimization.md
lab3/configs/: static_config.yaml
lab3/database/: data.sql  queries.sql  schema.sql
lab3/init-db/: 01-create-dbs.sh  02-recipes-db.sql  03-users-db.sql  04-auth-db.sql  05-data-recipes.sql  06-data-users.sql  07-data-auth.sql
lab3/src/: api_types.hpp  handlers.cpp  handlers.hpp  recipe_storage.cpp  recipe_storage.hpp
lab4/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml
lab4/configs/: config_vars.yaml  static_config.yaml
lab4/mongo/: data.json  init-mongo.js  queries.js  schema_design.md  validation.js
lab4/src/: handlers.cpp  handlers.hpp  mongo_storage.cpp  mongo_storage.hpp
lab5/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  performance_design.md
lab5/configs/: config_vars.yaml  static_config.yaml
lab5/src/: cache_manager.cpp  cache_manager.hpp  handlers.cpp  handlers.hpp  rate_limiter.cpp  rate_limiter.hpp
lab6/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  event_catalog.md  event_driven_design.md
lab6/configs/: static_config.yaml
lab6/src/: api_types.hpp  api_utils.hpp  event_consumer.cpp  event_consumer.hpp  event_producer.cpp  event_producer.hpp  event_types.cpp  event_types.hpp  handlers.cpp  handlers.hpp  recipe_read_model.cpp  recipe_read_model.hpp  recipe_storage.cpp  recipe_storage.hpp
